# BDSup2SubPlusPlus

./: CMakeLists.txt
src/Subtitles/: bitmap.h  subdvd.cpp  subtitleprocessor.h  supxml.cpp  supxml.h
src/Tools/: timeutil.h
